fixed broken links

--- a/content/about.qmd
+++ b/content/about.qmd
@@ -7,10 +7,10 @@ NOAA Fisheries will lead a 3 year effort to accelerate a transition to operation
 
 To expand on these efforts, PIFSC and SWFSC will lead a 3 year effort to accelerate the transition to operations for PAM-based glider surveys. The work will be focused in the Pacific initially because these Centers are ready to act and they are collectively responsible for the largest area under NMFS jurisdiction, have acute shortages of adequate shiptime, and must find alternative survey modalities to maintain their assessment operations. Despite the regional focus, the goal will be to develop a Research to Operations plan that can be adapted or applied in other regions seeking to implement PAM-equipped glider surveys to support their marine mammal assessments. The effort includes:
 
--   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future. See [***Gliders***](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliders.html) and [***Sensors***](https://nmfs-pam-glider.github.io/PAM-UxS/content/sensors.html) to learn more about available (and developing) hardware options.
+-   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future. See [***Gliders***](content/gliders.qmd) and [***Sensors***](content/sensors.qmd) to learn more about available (and developing) hardware options.
 
--   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices and how these choices may vary based on regional differences in assessment needs and oceanographic realities. For more information, see the [***Field Testing***](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliderRodeo.html).
+-   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices and how these choices may vary based on regional differences in assessment needs and oceanographic realities. For more information, see the [***Field Testing***](content/gliderRodeo.qmd).
 
--   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaiʻi in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on [***Ship & Glider Surveys***](https://nmfs-pam-glider.github.io/PAM-UxS/content/shipSurveys.html).
+-   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaiʻi in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on [***Ship & Glider Surveys***](content/shipSurveys.qmd).
 
 -   **Develop Spatial Modeling Methods.** We will initiate development of statistical models to accommodate marine mammal acoustic detection data from PAM Gliders, facilitating adoption of these methods to address our stock assessment needs. See [***PAM-Stocks - Mobile recorders***](https://nmfs-ost.github.io/PAM-Stocks/content/gliderStocks.html) for more information.
