--- a/content/sensors.qmd
+++ b/content/sensors.qmd
@@ -26,7 +26,9 @@ PAM Sensors:
 (Wideband Intelligent Signal Processor and Recorder) is an acoustic processor 
 developed by Embedded Ocean Systems and designed for limited space and low 
 power, with options for customized applications. WISPR are currently used on 
-Seagliders, and integration for Slocum gliders is under development.
+Seagliders, and recent integration with Slocum gliders is undergoing testing.
+
+WISPR3 resources can be found [here](https://github.com/embeddedocean/wispr3).
 
 ::: columns
 ::: {.column width="80%}
