--- a/content/gliderRodeo.qmd
+++ b/content/gliderRodeo.qmd
@@ -3,14 +3,19 @@ title: Field Testing
 subtitle: Field testing of PAM-Glider Systems
 ---
 
-## Goal: 
+## Goal:
+
 In-water instrumentation testing of several PAM-glider systems with the goal of examining hardware and sensor choices (including WHOI DMONs) and how these choices may vary based on regional differences in assessment needs and oceanographic realities. (supported by the UxS Plankton to Whales Project and PAM SI).
 
 ## Deployment Tracker
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTPI-3uRxrq3h9f0C1DLAHUVDzpRsHuQDGbjZHOCckjuP2yLr-II1muMCTCFvpn22OKmd2wM2pmU27j/pubhtml?gid=1944379023&amp;single=true&amp;widget=true&amp;headers=false" style="width:950px; height:500px; border: 2px solid black;"></iframe>
+
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTPI-3uRxrq3h9f0C1DLAHUVDzpRsHuQDGbjZHOCckjuP2yLr-II1muMCTCFvpn22OKmd2wM2pmU27j/pubhtml?gid=1944379023&amp;single=true&amp;widget=true&amp;headers=false" style="width:950px; height:500px; border: 2px solid black;">
+
+</iframe>
+
 [Spreadsheet to track current and completed deployments](https://docs.google.com/spreadsheets/d/1MzLF2bmLcWy9u6glj3hu6Q1DINr5-NeJPCuBQgy-LZU/edit?usp=sharing). Link for NOAA personnel (password protected)
 
-Post mission summary reports can be found [here][fill in link] or linked in the last column of the Deployment Tracker spreadsheet above.
+Post mission summary reports can be found \[here\]\[fill in link\] or linked in the last column of the Deployment Tracker spreadsheet above.
 
 ## Slocum WISPR
 
@@ -25,3 +30,7 @@ This was the first deployment of this glider, which was prepared by Teledyne sta
 Data were downloaded locally, and a long term spectral average (LTSA) shows high levels of noise at frequencies below 10 kHz and numerous encounters with animals (@fig-fieldTest_LTSA_SlocumWispr_feb2025). This field test serves as a first trial of this glider and included sensors that may create their own noise, including a pumped CTD. These recordings will be examined to identify glider noise that may interfere with acoustic detection of the marine environments.
 
 ![Long term spectral average (LTSA) of Slocum glider with WISPR acoustic processor during field trials off San Diego, February 2025.](images/fieldTest_LTSA_SlocumWispr_feb2025.png){#fig-fieldTest_LTSA_SlocumWispr_feb2025 width="321"}
+
+Autonomous gliders also provide environmental measures in the form of conductivity-temperature-depth (CTD) sensors (at a minimum), and may include any number of additional sensors to study the biotic and abiotic environment. Environmental sensors on Unit_1024 included temperature, chlorophyll, and backscatter (see preliminary environmental data visualizations, below). Environmental sensors such as pumped CTDs can add electrical and radiated noise that may interfere with passive acoustic data quality. Additional information on environmental data products for the SWFSC Slocum Gliders is provided [here](https://swfsc.github.io/glider-lab-manual/content/glider-data.html#data-products).
+
+![Environmental data collected during sea trial of Unit_1024 including temperature, chlorophyll, and backscatter including data plotted along geographic map (top), by depth (middle) and a gridded data plotted by profile index and depth (bottom).](images/unit_1024-20250224_oceo.png)
