Linking to National Network

--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,9 @@ title: "NOAA Fisheries PAM-Equipped Glider Research"
 page-layout: full
 ---
 
+*This project is a part of NOAA Fisheries [PAM SI coordination](https://nmfs-ost.github.io/PAM_National_Network/content/SI%20coord/SI_Coordination.html)*
+
+
 ::: columns 
 ::: {.column width="75%"}
 
