--- a/content/glider-FieldTesting.qmd
+++ b/content/glider-FieldTesting.qmd
@@ -3,11 +3,11 @@ title: Field Testing
 subtitle: Field testing of PAM-Glider Systems
 ---
 
-## Goal:
+# Goal:
 
 In-water instrumentation testing of several PAM-glider systems with the goal of examining hardware and sensor choices (including WHOI DMONs) and how these choices may vary based on regional differences in assessment needs and oceanographic realities. (supported by the UxS Plankton to Whales Project and PAM SI).
 
-## Deployment Tracker
+# Deployment Tracker
 
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTPI-3uRxrq3h9f0C1DLAHUVDzpRsHuQDGbjZHOCckjuP2yLr-II1muMCTCFvpn22OKmd2wM2pmU27j/pubhtml?gid=1944379023&amp;single=true&amp;widget=true&amp;headers=false" style="width:950px; height:500px; border: 2px solid black;">
 
@@ -17,20 +17,21 @@ In-water instrumentation testing of several PAM-glider systems with the goal of 
 
 Post mission summary reports can be found \[here\]\[fill in link\] or linked in the last column of the Deployment Tracker spreadsheet above.
 
-## Slocum WISPR
+# Field Test Summaries
+## unit_1024-20250224
+### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/1LQ9ch1gEuHtHEUbC7dymbtm9UlZu6IaePKbmLpKTlyU/edit?tab=t.0)
+### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.xy58u859kk1o)
+### Summary 
+To-do
 
-The Ecosystem Science Division (ESD) at the Southwest Fisheries Science Center (SWFSC) deployed glider “unit_1024” on February 24, 2025 off San Diego, CA (@fig-fieldTest_pathMap_SlocumWispr_feb2025). This glider was deployed in conjunction with Teledyne Webb Research from the vessel R/V *Benthic Cat*. The main objective of this deployment was to test two new sensors: a photosynthetically active radiation (PAR) sensor (Biospherical Instruments) and a passive acoustic monitor (“WISPR”, Embedded Ocean Systems). The glider was programmed to fly approximately 70 km north between 9-Mile Bank and Del Mar Steeples toward Oceanside Harbor. However, 36 hours after deployment, the glider mission aborted its mission for a leak in the aft section. An emergency recovery was initiated for February 26 aboard the R/V *Outer Limits*. Prior to the leak, the glider traveled a total of 29.74 km wile performing 29 dives to a maximum depth of 600 m.
+## stenella-20250414
+### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/1JWkHtAoQar3fr0TLmKJT9VI5O5IqFkpEw4G_07ZFRts/edit?tab=t.0)
+### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.8h8jgpqjpia7)
+### Summary 
+To-do
 
-Details regarding this sea trial, including pre- and post-trial testing can be found [here](https://github.com/nmfs-ost/PAM-Glider/blob/main/supplemental/2025%20February%20unit_1024%20Emergency%20Recovery%20and%20Post-Deployment%20Report.pdf).
-
-![Path of “unit_1024.” unit_1024 was deployed 22 km west of Mission Bay, San Diego, CA on February 24, 2025. The glider flew a path west from the initial deployment location and was headed north toward Oceanside, CA, when it aborted its mission for a leak in the aft section. The glider drifted southwest overnight and was recovered on February 26, 2025 by the F/V Outer Limits. Yellow dots indicate where the glider surfaced throughout its deployment, red dots indicate points where the glider aborted its mission, and the bullseye represents the glider’s next waypoint.](images/fieldTest_pathMap_SlocumWispr_feb2025.PNG){#fig-fieldTest_pathMap_SlocumWispr_feb2025 width="331"}
-
-This was the first deployment of this glider, which was prepared by Teledyne staff. Therefore, no deployment-specific testing was done beyond our standard pre-deployment preparations and tests. Configuration and initialization files for the WISPR prioritized testing of the device and a high sample rate (200 kHz) provided sampling of noise at high frequencies. We were unable to simulate missions with these files prior to deployment because of tight scheduling between glider training and boat availability.
-
-Data were downloaded locally, and a long term spectral average (LTSA) shows high levels of noise at frequencies below 10 kHz and numerous encounters with animals (@fig-fieldTest_LTSA_SlocumWispr_feb2025). This field test serves as a first trial of this glider and included sensors that may create their own noise, including a pumped CTD. These recordings will be examined to identify glider noise that may interfere with acoustic detection of the marine environments.
-
-![Long term spectral average (LTSA) of Slocum glider with WISPR acoustic processor during field trials off San Diego, February 2025.](images/fieldTest_LTSA_SlocumWispr_feb2025.png){#fig-fieldTest_LTSA_SlocumWispr_feb2025 width="321"}
-
-Autonomous gliders also provide environmental measures in the form of conductivity-temperature-depth (CTD) sensors (at a minimum), and may include any number of additional sensors to study the biotic and abiotic environment. Environmental sensors on Unit_1024 included temperature, chlorophyll, and backscatter (see preliminary environmental data visualizations, below). Environmental sensors such as pumped CTDs can add electrical and radiated noise that may interfere with passive acoustic data quality. Additional information on environmental data products for the SWFSC Slocum Gliders is provided [here](https://swfsc.github.io/glider-lab-manual/content/glider-data.html#data-products).
-
-![Environmental data collected during sea trial of Unit_1024 including temperature, chlorophyll, and backscatter including data plotted along geographic map (top), by depth (middle) and a gridded data plotted by profile index and depth (bottom).](images/unit_1024-20250224_oceo.png)
+## risso-20250414
+### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/11aBBLY6xJhdd2vDwuhdBLK3SVcPaqnxbkMR-Fn0rgy0/edit?tab=t.0)
+### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.l1yk3lbyn1p1)
+### Summary 
+To-do
