--- a/content/presentations.qmd
+++ b/content/presentations.qmd
@@ -3,7 +3,27 @@ title: "Presentations & Publications"
 format: html
 ---
 
-## Past Presentations
+## Presentations
+
+### Development of a Pacific-wide Passive Acoustic Glider Program to Enhance Cetacean Survey and Assessment Capabilities, ASA Honolulu December 2025
+
+\[insert picture of pres\]
+
+-   **Selene Fregosi**, Shannon Rankin, David Mellinger, Erik Norris, Kourtney Burger, Anthony Cossio, Jen Walsh, Erin Olseon,
+
+-   **Abstract:** Traditional vessel-based surveys conducted by the National Marine Fisheries Service (NMFS) for cetacean stock assessment are often limited by high costs and insufficient coverage. This is particularly true in the Pacific region, which is the largest area under NMFS jurisdiction and is subject to acute shortages of adequate ship time. To address these limitations, a focused initiative is accelerating the use of Passive Acoustic Monitoring (PAM) on buoyancy-driven underwater gliders by developing a Pacific-wide NMFS PAM glider program. The primary goal is to establish a national strategy to augment critical stock assessment surveys and reduce dependency on ships for regular monitoring. Efforts include building capacity to sustain glider operations; validating vehicle and sensor performance and developing use-case guidelines with in-water testing; comparing glider data streams to concurrent shipboard surveys off the U.S. West Coast and Hawaiʻi; and advancing modeling methods to integrate these new data into stock assessments. While the initial effort is focused in the Pacific region, a related Research-to-Operations plan will be adaptable to other regions. The project stands to improve conservation and management of protected species by providing scalable and persistent monitoring in a changing ocean.
+
+-   **Links:** \[Slides\], \[Video\]
+
+### Development of a Pacific-wide Passive Acoustic Glider Program to Augment Cetacean Surveys
+
+\[insert picture of pres\]
+
+-   **Selene Fregosi**, Erin Olseon, Erik Norris, Shannon Rankin, Kourtney Burger, Anthony Cossio, Jen Walsh, David Mellinger
+
+-   **Abstract:** A collaborative effort between PIFSC, SWFSC and OSU/PMEL aims to accelerate NMFS’s use of passive acoustic monitoring (PAM) glider surveys to augment existing ship-based surveys for cetacean stock assessment. This effort builds on historically successful efforts by NMFS to use PAM-equipped gliders including studies of endangered right whales off the U.S. East Coast and odontocetes around the Main Hawaiian Islands. This previous work highlighted the feasibility of using PAM-equipped gliders to bolster data collection efforts for cetacean surveys. Use of gliders is of particular interest in the Pacific region, which is the largest area under NMFS jurisdiction and is subject to acute shortages of adequate ship time; therefore, this region must identify survey modalities that maintain assessment operations over as large an area as possible. While the initial effort is focused in the Pacific region, this project will result in a Research-to-Operations plan that can be adapted or applied in other regions. Primary goals of this work are to (1) build capacity to sustain glider operations within NMFS through purchasing equipment, developing infrastructure, and hiring piloting and technical staff; (2) conduct detailed in-water instrumentation testing and comparison of currently available glider and sensor types to provide guidance for various use cases; (3) conduct concurrent glider and shipboard surveys off both the U.S. West Coast and Main Hawaiian Islands which will provide a unique opportunity to compare these two data streams; and (4) advance animal distribution modeling methods to integrate the PAM-glider collected data into stock assessments.
+
+-   **Links:** \[Slides\], \[Video\]
 
 ### **NOAA Fisheries’ Strategy for Passive Acoustic Gliders,** UG2 Workshop '24
 
@@ -24,15 +44,5 @@ format: html
 -   **Abstract:** As part of a strategic goal to invest in passive acoustic monitoring using the uncrewed systems strategic initiative, NOAA Fisheries is pursuing field tests of several underwater gliders equipped with passive acoustic monitoring (PAM) systems. These tests will take place during two 2-week ‘glider rodeos’ planned for the U.S. West Coast and Hawaii in 2025-2026. Testing will include Slocum (Teledyne Webb), Seaglider (Univ. Washington), OceanScout (Hefring), and SeaExplorer (Alseamar) platforms with DMON, WISPR, and Alseamar acoustic acquisition systems. A pre-designed survey path will allow resampling of the same area by each glider over each 2-week effort to maximize spatial and temporal overlap. Glider performance and acoustic recording and detection metrics will be measured for each system to enable comparison and inform future glider acquisitions and use by NOAA Fisheries. Metrics under consideration include survey, data quality, and acoustic metrics. This is a unique opportunity to examine the performance and capability of a diverse set of currently available PAMequipped underwater gliders, and we welcome community input into test design and assessment metrics. There may be unfunded opportunities for participation to compare other systems if they are provided, and we will offer logistical support when possible. Results will be made publicly available to inform future research and development.
 
 -   **Links:** \[Slides\], \[Video\]
-
-### Development of a Pacific-wide Passive Acoustic Glider Program to Augment Cetacean Surveys
-
--   \[insert picture of pres\]
-
-    -   **Selene Fregosi**, Erin Olseon, Erik Norris, Shannon Rankin, Kourtney Burger, Anthony Cossio, Jen Walsh, David Mellinger
-
-    -   **Abstract:** A collaborative effort between PIFSC, SWFSC and OSU/PMEL aims to accelerate NMFS’s use of passive acoustic monitoring (PAM) glider surveys to augment existing ship-based surveys for cetacean stock assessment. This effort builds on historically successful efforts by NMFS to use PAM-equipped gliders including studies of endangered right whales off the U.S. East Coast and odontocetes around the Main Hawaiian Islands. This previous work highlighted the feasibility of using PAM-equipped gliders to bolster data collection efforts for cetacean surveys. Use of gliders is of particular interest in the Pacific region, which is the largest area under NMFS jurisdiction and is subject to acute shortages of adequate ship time; therefore, this region must identify survey modalities that maintain assessment operations over as large an area as possible. While the initial effort is focused in the Pacific region, this project will result in a Research-to-Operations plan that can be adapted or applied in other regions. Primary goals of this work are to (1) build capacity to sustain glider operations within NMFS through purchasing equipment, developing infrastructure, and hiring piloting and technical staff; (2) conduct detailed in-water instrumentation testing and comparison of currently available glider and sensor types to provide guidance for various use cases; (3) conduct concurrent glider and shipboard surveys off both the U.S. West Coast and Main Hawaiian Islands which will provide a unique opportunity to compare these two data streams; and (4) advance animal distribution modeling methods to integrate the PAM-glider collected data into stock assessments.
-
-        **Links:** \[Slides\], \[Video\]
 
 ## Publications
