--- a/content/presentations.qmd
+++ b/content/presentations.qmd
@@ -25,7 +25,7 @@ format: html
 
 -   **Links:** [Slides](https://github.com/nmfs-ost/PAM-Glider/blob/main/supplemental/Presentations/PSAWIV_2025_Fregosi_Pacific-wide%20passive%20acoustic%20gliders.pdf), \[Video\]
 
-### **NOAA Fisheries’ Strategy for Passive Acoustic Gliders,** UG2 Workshop '24
+### NOAA Fisheries’ Strategy for Passive Acoustic Gliders, UG2 Workshop '24
 
 \[insert picture of pres\]
 
