--- a/content/glider-LocalFieldTesting.qmd
+++ b/content/glider-LocalFieldTesting.qmd
@@ -1,42 +1,45 @@
 ---
 title: Local Sea Trials
-subtitle: Local Field Testing of PAM-Glider Systems
+subtitle: Local Field Testing of PAM Glider Systems
 ---
 
 # Goal:
 
-In-water instrumentation testing of several PAM-glider systems with the goal of examining hardware and sensor choices (including WHOI DMONs) and how these choices may vary based on regional differences in assessment needs and oceanographic realities. (supported by the UxS Plankton to Whales Project and PAM SI).
+In-water instrumentation testing of newly installed or aquired PAM glider systems to test operational settings and modes and assess data quality and glider-generated noise sources (supported by the UxS Plankton to Whales Project and PAM SI).
 
-# Deployment Tracker
+# Sea Trial Summaries
 
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTPI-3uRxrq3h9f0C1DLAHUVDzpRsHuQDGbjZHOCckjuP2yLr-II1muMCTCFvpn22OKmd2wM2pmU27j/pubhtml?gid=1944379023&amp;single=true&amp;widget=true&amp;headers=false" style="width:950px; height:500px; border: 2px solid black;">
+Three sets of PAM glider sea trials were conducted by Southwest Fisheries Science Center (SWFSC) in San Diego in 2025. In February, a two day test was conducted with a Slocum glider recently equipped with a WISPR recording system. An unrelated glider leak required recovery after two days. A two-week test was conducted in April 2025 with both of the PAM-equipped Slocums - one with WISPR (a modified build of the February test) and one with a DMON recording system. This deployment provided useful data for diagnosing different potential sources of Slocum glider or other sensor generated noise and tested a variety of WISPR settings. Finally, in September 2025 a four-day sea trial of the Hefring Oceanscout (equipped with a WISPR) was conducted which served as a test of piloting a brand new glider system as well as providing valuable acoustic data from this new glider.
 
-</iframe>
+These trials represent a critical step in evaluating the efficacy and operational capabilities of integrating PAM technologies with gliders and planning for their operational use by NOAA for marine mammal research and ecosystem monitoring.
 
-[Spreadsheet to track current and completed deployments](https://docs.google.com/spreadsheets/d/1MzLF2bmLcWy9u6glj3hu6Q1DINr5-NeJPCuBQgy-LZU/edit?usp=sharing). Link for NOAA personnel (password protected)
-
-Post mission summary reports can be found \[here\]\[fill in link\] or linked in the last column of the Deployment Tracker spreadsheet above.
-
-# Field Test Summaries
 ## unit_1024-20250224
+Slocum with WISPR. Intial engineering test.
+
 ### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/1LQ9ch1gEuHtHEUbC7dymbtm9UlZu6IaePKbmLpKTlyU/edit?tab=t.0)
 ### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.xy58u859kk1o)
 ### Summary 
 To-do
 
 ## stenella-20250414
+Slocum with WISPR. Two-week test of various WISPR settings resulting in some continous and some intermittent acoustic recordings with cycling of other Slocum sensors to diagnose noise sources.
+
 ### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/1JWkHtAoQar3fr0TLmKJT9VI5O5IqFkpEw4G_07ZFRts/edit?tab=t.0)
 ### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.8h8jgpqjpia7)
 ### Summary 
 To-do
 
 ## risso-20250414
+Slocum with DMON. Two-week test with continuous low-frequency and duty cycled high-frequency acoustic recordings and cycling of other Slocum sensors. 
+
 ### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/11aBBLY6xJhdd2vDwuhdBLK3SVcPaqnxbkMR-Fn0rgy0/edit?tab=t.0)
 ### [Acoustic Data Assessment](https://docs.google.com/document/d/17Tu1QX2XrTTKTicmKIXhrJO86YwIlDjTwo5DGiNWbMk/edit?tab=t.0#heading=h.l1yk3lbyn1p1)
 ### Summary 
 To-do
 
 ## elrond-20250908
+Oceanscout. Initial piloting test with continous high-frequency acoustic recordings. 
+
 ### [SWFSC Glider Lab Deployment Summary](https://docs.google.com/document/d/1TkiaCJAuFGLfH1TDVV5Bh11jLWTybSc2HVcEjNRzOLc/edit?tab=t.0)
 ### [Acoustic Data Assessment]()
 ### Summary 
